Version 0.1.2:
    * [fix] #15 Exception when server is not found

Version 0.1.1:
    * [fix] #13 CollectionUtils not found
    * [fix] #14 UI resources not properly disposed when closing the project

Version 0.1.0: Initial version
    * Server configuration
    * Display collections for each database
    * Display collections content with tree mongo object navigation
    * Simple querying
    * Advanced querying with pipeline operation (Mongo Server should be 2.2.0 minimum)
    * Copy / Paste for query and results